always commitIfNeeded in multi-update. Fixes db.eval() SERVER-3447